# Leams

./: .env.compose  .env.example  .gitignore  .ideas  DEVELOPER.md  Dockerfile  LICENSE.md  README.md  \  celerybeat-schedule.db  compose.yml  conf.py  debian.sh  demo_jwt.py  flake.nix  ideas  index.rst  jwt-private.pem  jwt-public.pem  jwt_auth.py  jwt_fin.py  jwt_test.py  launch.sh  main.py  nginx-selfsigned.crt  nginx-selfsigned.key  nginx.conf  nginx.rtmp.conf  oauth.py  oauth_model.py  package-lock.json  package.json  pyproject.toml  register_test.py  shell.nix  test  test.py  testing.json  testingdff.json  tsconfig.json
.dart_tool/: package_config.json  package_graph.json
.github/workflows/: main.yml
Leams_backend/: pyproject.toml
Leams_backend/data/: categories.json
Leams_frontend/: ROADMAP.md
api_contracts/: flake.nix  openapi.json  openapi.jsonc  pyproject.toml
api_contracts/axios/: api.ts  base.ts  common.ts  configuration.ts  index.ts
api_contracts/fastapi/: README.md  openapi.yaml  setup.cfg
api_contracts/fastapi/.openapi-generator/: FILES
api_contracts/fastapi/src/openapi_server/: main.py
api_contracts/fastapi/src/openapi_server/apis/: default_api.py  default_api_base.py
api_contracts/fastapi/src/openapi_server/models/: auth_github_post200_response.py  register_post200_response.py
api_contracts/fastapi/tests/: test_default_api.py
app/: category.json  main.json  main.py  routers.py  subs.json  test.py
app/(auth)/: login.tsx  register.tsx
app/(tabs)/: index.tsx
app/core/: jwt_fin.py  oauth.py  register_test.py  settings.py
app/db/: core.py  db_core.py
app/middleware/: middleware.py
app/models/: auth.py  models.py
app/schemas/: jwt_schemes.py  settings.py
app/scripts/: category.py  demo.py  subs.py
app/services/: chat_test.py  register_test.py  s3.py  user.py
app/utils/: parser.py
backend/: DEVELOPER.md  Dockerfile  \  category.json  celerybeat-schedule.db  flake.nix  pyproject.toml  requirements.txt  streams.json  testing.py
backend/app/: main.py  routers.py
backend/app/api/routers/gets/: auth_social.py  demo.py  main_page.py  nginx.py  user_set_stream.py
backend/app/core/: jwt_fin.py  oauth.py  register_test.py
backend/app/db/: db_core.py
backend/app/models/: auth.py
backend/app/schemas/: auth.py
backend/app/services/: chat_test.py  user.py
backend/app/services/celery/: beat_config.py  celery_main.py
backend/app/services/celery/tasks/: download.py  sample_parse.py
backend/app/utils/: decode_jwt.py  hash_pas.py  parser.py
backend/docs/_build/doctrees/: environment.pickle  index.doctree
backend/docs/_build/html/: .buildinfo  .buildinfo.bak  genindex.html  index.html  searchindex.js
backend/src/app/api/routers/gets/: list_streams.py  nginx.py
backend/src/app/schemas/: roles.py
backend/src/legacy/parser/: parser1.py
database/: models.py  smod.py
docs/: DEPLOYMENT.md  Dockerfile  conf.py  flake.nix  main.py  mkdocs.yml  pyproject.toml  test
docs/docs/: DELETETHIS.md  architecture.md  contributing.md  faq.md  index.md  installation.md  license.md
docs/mediawiki/: API_Overview.wiki  Architecture.wiki  Contributing.wiki  FAQ.wiki  Index.wiki  Installation.wiki  Main_Page.wiki  README.md  Streaming_Setup.wiki
docs/site/: 404.html  index.html
frontend/: DEVELOPER.md  Dockerfile  package-lock.json  package.json
frontend/coverage/: clover.xml  index.html
legacy/parser/: parser2.py
mobile/: MOBILE_APP_SECTION.tex  package.json
models/: engine.py  jwt_schemes.py  models.py  orm.py  user.py
parser/: categories.py
scrapper/: actual_offers.py  categories.py  companies.py  constants.py  footer.py  main.py  product_page.py  products.py  test.py
(+119 files in other folders)
