[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.116.1",
    "passlib[bcrypt]>=1.7.4",
    "psycopg[binary,pool]>=3.2.9",
    "pydantic>=2.11.7",
    "pyjwt>=2.10.1",
    "sqlalchemy>=2.0.42",
    "sqlmodel>=0.0.24",
]
