[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiobotocore>=3.0.0",
    "aiodns>=3.6.1",
    "aiohttp>=3.12.15",
    "alembic>=1.17.2",
    "auth0-fastapi>=1.0.0b4",
    "auth0-python>=4.10.0",
    "authlib>=1.6.3",
    "beautifulsoup4>=4.14.3",
    "celery>=5.6.0",
    "cryptography>=45.0.6",
    "dotenv>=0.9.9",
    "fastapi-users-db-sqlmodel>=0.3.0",
    "fastapi-users[oauth,sqlalchemy,sqlmodel]>=15.0.3",
    "fastapi[all]>=0.115.14",
    "html5lib>=1.1",
    "loguru>=0.7.3",
    "m2r2>=0.3.4",
    "passlib[bcrypt]>=1.7.4",
    "playwright>=1.57.0",
    "psycopg[binary,pool]>=3.2.9",
    "pydantic>=2.11.7",
    "pyjwt==2.10.1",
    "redis>=7.1.0",
    "selenium-driverless>=1.9.4",
    "setuptools==80.9.0",
    "sphinx>=8.2.3",
    "sqlalchemy>=2.0.42",
    "undetected-chromedriver>=3.5.5",
    "uvicorn>=0.35.0",
    "websockets>=15.0.1",
    "werkzeug>=3.1.3",
]

[tool.uv.workspace]
members = [
    ".",
    ".",
]

[tool.uv.sources]
backend = { workspace = true }

[dependency-groups]
dev = [
    "backend",
]
