[metadata]
name = openapi_server
version = 1.0.1
description = My first OpenAPI contracts to link strictly front, back-end parts. Also to give developers and users the whole vision what an endpoint does
long_description = file: README.md
keywords = OpenAPI Contracts
python_requires = >= 3.7.*
classifiers =
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7

[options]
install_requires = fastapi[all]
setup_requires = setuptools
package_dir = =src
packages = find_namespace:

[options.packages.find]
where = src
